fix(style.css): overlapping of footer and generator category element

--- a/src/style.css
+++ b/src/style.css
@@ -982,8 +982,8 @@ footer {
   flex-direction: column;
   justify-content: center;
   font-size: 0.7rem;
-  position: absolute;
-  bottom: 2rem;
+  position: relative;
+  top: 2rem;
   color: var(--text-color);
 }
 
